[gd_scene load_steps=2 format=3 uid="uid://cqcv3o8v24ae4"]

[ext_resource type="Script" path="res://Scripts/Inventory/InventorySlot.gd" id="1_c6wk3"]

[node name="Slot" type="Button"]
custom_minimum_size = Vector2(40, 40)
focus_mode = 0
script = ExtResource("1_c6wk3")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
